<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.msikayaalimi.view.fragments.MarketFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.msikayaalimi.view.fragments.ProductsFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.msikayaalimi.view.fragments.OrdersFragment"
        android:label="@string/label_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.msikayaalimi.view.fragments.TrainingFragment"
        tools:layout="@layout/fragment_training"
        android:label="@string/title_training_activity"/>

</navigation>