<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_nav"
    app:startDestination="@+id/navigation_dashboard_customer">

    <fragment
        android:id="@+id/navigation_dashboard_customer"
        android:name="com.example.msikayaalimi.view.fragments.TrainingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_products" />

    <activity
        android:id="@+id/navigation_categories_customer"
        android:name="com.example.msikayaalimi.view.activities.FilterActivity"
        android:label="@string/title_categories"
        tools:layout="@layout/activity_filter"/>

    <activity
        android:id="@+id/navigation_search_customer"
        android:name="com.example.msikayaalimi.view.activities.SearchActivity"
        android:label="@string/title_search"
        tools:layout="@layout/activity_search" />

</navigation>