<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MyCartActivity"
    android:background="@color/ColorSecondary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_my_cart_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.msikayaalimi.controller.MYATextViewBold
            android:id="@+id/tv_my_cart_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="20dp"
            android:text="@string/my_cart_title"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"/>

    </androidx.appcompat.widget.Toolbar>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerFrameLayout_my_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ll_shimmer_products"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/shimmering_splash" />


        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_cart_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_my_cart_activity"
        tools:visibility="visible"/>

    <com.example.msikayaalimi.controller.MYATextView
        android:id="@+id/tv_no_cart_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/no_items_in_cart"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/et_textSize"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/ll_checkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_my_cart_activity" />

    <LinearLayout
        android:id="@+id/ll_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ll_cart_item_marginTop"
        android:orientation="vertical"
        android:padding="@dimen/ll_checkout_padding"
        android:visibility="gone"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.msikayaalimi.controller.MYATextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtotal_label"
                android:textColor="@color/black"
                android:textSize="@dimen/checkout_label_value_textSize" />

            <com.example.msikayaalimi.controller.MYATextView
                android:id="@+id/tv_subtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:text="MWK 2000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.msikayaalimi.controller.MYATextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transaction_fee_label"
                android:textColor="@color/black"
                android:textSize="@dimen/checkout_label_value_textSize" />

            <com.example.msikayaalimi.controller.MYATextView
                android:id="@+id/tv_transaction_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:text="MWK 400" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.msikayaalimi.controller.MYATextViewBold
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_amount_label"
                android:textColor="@color/black"
                android:textSize="@dimen/checkout_label_value_textSize" />

            <com.example.msikayaalimi.controller.MYATextViewBold
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/checkout_label_value_textSize"
                android:text="MWK 2500" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_payment_options"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/til_mobile_number"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_mobile_number">

            <com.example.msikayaalimi.controller.MYARadioButton
                android:id="@+id/rb_mobile_money"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_gender_tab_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/mobile_money_label"
                android:textColor="@drawable/drawable_gender_tab_tet_color_selector"
                android:textStyle="bold" />

            <com.example.msikayaalimi.controller.MYARadioButton
                android:id="@+id/rb_bank_transfer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/drawable_gender_tab_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/bank_transfer_label"
                android:textColor="@drawable/drawable_gender_tab_tet_color_selector"
                android:textStyle="bold" />
        </RadioGroup>


        <com.example.msikayaalimi.controller.MYAButton
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:background="@color/ColorPrimary"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/checkout_btn_label"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_payment_options" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>