<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.QuizResultActivity"
    android:background="@color/ColorPrimary">

    <FrameLayout
        android:id="@+id/fl_quiz_result_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:scaleType="center"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_quiz_result" />

    </FrameLayout>

    <com.example.msikayaalimi.controller.MYATextViewBold
        android:id="@+id/tv_quiz_result_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:text="@string/label_congratulations"
        android:textColor="@color/white"
        android:textSize="21dp"
        app:layout_constraintTop_toBottomOf="@+id/fl_quiz_result_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.msikayaalimi.controller.MYATextView
        android:id="@+id/tv_quiz_result_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:text="Your score is: "
        android:textColor="@color/white"
        android:textSize="21dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_quiz_result_congratulations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.msikayaalimi.controller.MYAButton
        android:id="@+id/btn_completed_quiz_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/orange_button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_finish_label"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_quiz_result_score"/>


</androidx.constraintlayout.widget.ConstraintLayout>